# amongus-desktop-pet-game

./: LICENSE
src-tauri/: Cargo.toml  tauri.conf.json5
src-tauri/src/: main.rs
