[package]
name = "amongus-desktop-pet"
version = "0.1.0"
description = "A Among Us themed desktop pet"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = ["config-json5", "unstable"] }
tauri-plugin-log = "2.0.0-rc"
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
wgpu = "24.0.1"
rodio = "0.20.1"
rusqlite = "0.34.0"
